crates/pg_syntax/tests/snapshots/postgres_regress/truncate@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO truncate_a VALUES (1);
---
InsertStmt@0..34
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "truncate_a"
  Whitespace@22..23 " "
  SelectStmt@23..32
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..32
      AConst@31..32
        Iconst@31..32 "1"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

