crates/pg_syntax/tests/snapshots/postgres_regress/truncate@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO trunc_e VALUES (1,1);"
---
InsertStmt@0..33
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "trunc_e"
  Whitespace@19..20 " "
  SelectStmt@20..31
    Values@20..26 "VALUES"
    Whitespace@26..27 " "
    Ascii40@27..28 "("
    List@28..31
      AConst@28..29
        Iconst@28..29 "1"
      Ascii44@29..30 ","
      AConst@30..31
        Iconst@30..31 "1"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

