crates/pg_syntax/tests/snapshots/postgres_regress/truncate@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TABLE trunc_c;
---
TruncateStmt@0..23
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..22
    Ident@15..22 "trunc_c"
  Ascii59@22..23 ";"

