crates/pg_syntax/tests/snapshots/postgres_regress/truncate@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "TRUNCATE TABLE trunc_c,truncate_a;"
---
TruncateStmt@0..34
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..22
    Ident@15..22 "trunc_c"
  Ascii44@22..23 ","
  RangeVar@23..33
    Ident@23..33 "truncate_a"
  Ascii59@33..34 ";"

