crates/pg_syntax/tests/snapshots/postgres_regress/truncate@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "TRUNCATE TABLE trunc_c,truncate_a,trunc_d,trunc_e;"
---
TruncateStmt@0..50
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  Table@9..14 "TABLE"
  Whitespace@14..15 " "
  RangeVar@15..22
    Ident@15..22 "trunc_c"
  Ascii44@22..23 ","
  RangeVar@23..33
    Ident@23..33 "truncate_a"
  Ascii44@33..34 ","
  RangeVar@34..41
    Ident@34..41 "trunc_d"
  Ascii44@41..42 ","
  RangeVar@42..49
    Ident@42..49 "trunc_e"
  Ascii59@49..50 ";"

